Bug 1168531 - Fix MediaCodecReader video playback problem r=bwu